--- a/arabic page/arabic.css
+++ b/arabic page/arabic.css
@@ -22,7 +22,8 @@ html{
 }
 
 .container{
-    padding: 1% 5%;
+    width: 90%;
+    margin-inline: auto;
 }
 a{
     text-decoration: none;
@@ -282,11 +283,13 @@ header .main-btn img{
     padding-top: 1%;
 }
 .services .container .grid{
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     gap:20px;
 }
 .services .container .grid .col{
+    flex-basis: calc(95% / 3);
     height: 250px;
     background-position:center;
     background-size: cover;
