--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ header .main-btn img{
         flex-basis: 100%;
     }
 }
-@media (min-width:768px),(max-width:968px){
+@media (min-width:768px) and (max-width:968px){
     .services .container .grid .col{
         flex-basis: calc(95% / 2)
     }
